# sir

./: .gitignore  Cargo.toml  README.md  TODO  castle.rs  chivalry.rs  impls.rs  knights.rs  macro.rs  quest.rs  rt.rs  sir.rs  spam.rs  util.rs  vocab.rs
examples/: sir_eel.rs  sir_eel2.rs  sir_eel3.rs  sir_manuel.rs  sir_mark.rs  sir_mun.rs  sir_vey.rs
sir/: Cargo.toml  chivalry.rs  impls.rs  knights.rs  rt.rs  sir.rs  spam.rs  util.rs
sir_eel/: Cargo.toml  sir_eel.rs
sir_macro/: Cargo.toml  macro.rs
sir_mark/: Cargo.toml  sir_mark.rs
sir_mun/: Cargo.toml  sir_mun.rs
sir_vey/: Cargo.toml  sir_vey.rs
