[package]
name = "sir"
version = "0.1.0"
edition = "2018"

[lib]
name = "sir"
path = "./sir.rs"

[dependencies]
sir_macro = { path = "./sir_macro", version = "0.1.0" }
mopa = "0.2"
eztrace = "*"

# field-offset = "0.3"

# TODO: These impls should get their own crates.
rlua = "0.9.*"
bincode = { git = "https://github.com/bincode-org/bincode", default-features = false, features = ["std", "alloc"] }
