[package]
name = "sir_macro"
version = "0.1.1"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of procedural macro `sir::blade!`."

[lib]
proc-macro = true
path = "./macro.rs"

[dependencies]
#syn = { version = "1.0", features = ["full", "extra-traits"] } # -- Debug trait
syn = { version = "1", features = ["full"] }
quote = "1"
#eztrace = "*"
proc-macro2 = "*"
